# FFmpegTurorial

./: .gitignore  README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/android/ffmpegturorial/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  BaseChannel.h  CMakeLists.txt  MediaBridge.cpp  MediaBridge.h  MediaManager.cpp  MediaManager.h  SafeQueue.h  VideoChannel.cpp  VideoChannel.h  macro.h  native-lib.cpp
app/src/main/java/com/android/ffmpegturorial/: MainActivity.java  SimplePlayer.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/android/ffmpegturorial/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
